# swcgeom

./: .envrc  .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  flake.nix  git-conventional-commits.yaml  justfile  pyproject.toml  setup.py
.github/workflows/: build.yml  create-relase.yml  github-publish.yml  pypi-publish.yml  test-pypi-publish.yml  test.yml
docs/: Branch.ipynb  BranchTree.ipynb  Tree.ipynb
examples/: 101711-11_16-of-16_initial.CNG.swc  Branch.ipynb  BranchTree.ipynb  CollectTips.ipynb  CutTree.ipynb  Features.ipynb  GeometryTransform.ipynb  ImageStack.ipynb  MST.ipynb  Sholl.ipynb  SpectralClustering.ipynb  SpectralClustering.ipynb.license  Tree.ipynb
examples/data/: 101711-10_4p5-of-16_initial.CNG.swc  1059283677_15257_2226-X16029-Y23953.swc  toydata.swc
examples/dgl/: graph.py
examples/pytorch/: branch.py  branch_dataset.py  tree_folder_dataset.py
swcgeom/: Branch.py  BranchTree.py  Tree.py  __init__.py  painter.py  transforms.py
swcgeom/analysis/: __init__.py  bifurcation_order.py  branch.py  branch_features.py  depth.py  feature_extractor.py  features.py  lmeasure.py  node.py  node_features.py  path.py  path_features.py  sholl.py  trunk.py  visualization.py  visualization3d.py  volume.py
swcgeom/core/: Branch.py  BranchTree.py  Tree.py  __init__.py  _node.py  base.py  branch.py  branch_tree.py  compartment.py  node.py  path.py  population.py  segment.py  swc.py  swc_utils.py  tree.py  tree_utils.py  tree_utils_impl.py
swcgeom/core/swc_utils/: __init__.py  assembler.py  base.py  checker.py  io.py  normalizer.py  subtree.py
swcgeom/data/: downloader.py  transforms.py
swcgeom/data/torch/: BranchDataset.py  BranchTreeFolderDataset.py  TreeFolderDataset.py  __init__.py  branch_dataset.py  branch_tree_folder_dataset.py  tree_folder_dataset.py
swcgeom/data/torch/transforms/: __init__.py  branch_transforms.py  tree_transforms.py
swcgeom/data/transforms/: __init__.py  branch_transforms.py  transform.py
swcgeom/datasets/: downloader.py
swcgeom/datasets/pytorch/: __init__.py  branch_dataset.py  branch_tree_folder_dataset.py  tree_folder_dataset.py
swcgeom/images/: __init__.py  augmentation.py  contrast.py  folder.py  io.py
swcgeom/images/loaders/: __init__.py  pbd.pyx  raw.pyx
swcgeom/transforms/: __init__.py  base.py  branch.py  branch_tree.py  geometry.py  image_preprocess.py  image_stack.py  images.py  mst.py  neurolucida_asc.py  path.py  population.py  tree.py  tree_assembler.py
swcgeom/transforms/dgl/: __init__.py  graph.py
swcgeom/transforms/pytorch/: __init__.py  branch.py
swcgeom/utils/: __init__.py  branch.py  debug.py  download.py  dsu.py  ellipse.py  file.py  geometry_object.py  neuromorpho.py  numpy.py  numpy_helper.py  painter.py  plotter_2d.py  plotter_3d.py  renderer.py  sdf.py  solid_geometry.py  transforms.py  volumetric_object.py
tests/: __init__.py
tests/analysis/: test_volume.py
tests/core/: test_population.py  test_tree.py
tests/core/swc_utils/: test_io.py
tests/transforms/: test_neurolucida_asc.py  test_tree.py
tests/utils/: __init__.py  test_dsu.py  test_geometry_object.py  test_numpy_helper.py  test_sdf.py  test_solid_geometry.py  test_transforms.py  test_volumetric_object.py
